Ajout d'un cache pour fix les contrastes du chat

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -726,6 +726,10 @@ video {
   z-index: 40;
 }
 
+.z-50 {
+  z-index: 50;
+}
+
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
